added search bar for entering city names

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,6 +1,11 @@
-.lead {
-  i.fa-city {
-    font-size: 1.1rem;
-    padding-right: 5px;
-  }
+#logo {
+  font-size: 0.8em;
+}
+
+#searchInputGrp {
+  margin-top: 40px;
+}
+
+#citySearchBtn {
+  width: 10%;
 }
