--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -3,9 +3,31 @@
 }
 
 #searchInputGrp {
-  margin-top: 40px;
+  margin-top: 20px;
+  width: 40%;
+  left: 30%;
+  margin-bottom: 10px;
 }
 
 #citySearchBtn {
   width: 10%;
+}
+
+Button {
+  .fa-search {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+#cardRow {
+    padding-top: 20px;
+    margin: auto;
+
+}
+
+// TODO: Align the cards with even spaces
+.row-container {
+    display: flex;
+    align-content: flex-start;
 }
