--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,33 +1,3 @@
-#logo {
-  font-size: 0.8em;
-}
-
-#searchInputGrp {
-  margin-top: 20px;
-  width: 40%;
-  left: 30%;
-  margin-bottom: 10px;
-}
-
-#citySearchBtn {
-  width: 10%;
-}
-
-Button {
-  .fa-search {
-    display: flex;
-    justify-content: center;
-  }
-}
-
-#cardRow {
-    padding-top: 20px;
-    margin: auto;
-
-}
-
-// TODO: Align the cards with even spaces
-.row-container {
-    display: flex;
-    align-content: flex-start;
-}
+// svg#sun-icon-logo {
+//   filter: drop-shadow(drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.4)));
+// }
